Add background image.

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url({{ url_for('static', filename='img/home-bg.jpg')}})">
+  <header class="masthead" style="background-image: url('https://external-preview.redd.it/thorin-and-company-by-art-calavera-v0-QMvOxqHkiYpyhsyd_uOstkqKMkohCYubLXlhB6kDpAc.png?width=1080&crop=smart&auto=webp&s=933f5c8f17c7deb060f0fe9b6fb8774313cdfe21')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
